fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -3065,3 +3065,7 @@ ul { list-style: none; }
         font-size: 0.7rem;
     }
 }
+
+body html {
+    overflow-x: hidden;
+}
